--- a/超过5名学生的课.md
+++ b/超过5名学生的课.md
@@ -1,4 +1,4 @@
-<h1>从不订购的客户</h1>
+<h1>超过5名学生的课</h1>
 <hr>
 有一个courses 表 ，有: student (学生) 和 class (课程)。
 
@@ -18,11 +18,14 @@
 | H       | Math       |
 | I       | Math       |
 
+
 应该输出：
+
 
 | class   |
 +---------+
 | Math    |
+
 
 Note:
 学生在每个课程中不应该重复被计算
